--- a/single.html
+++ b/single.html
@@ -200,7 +200,7 @@ for(let j=0;j<HeadvideoURL.length;j++)
 for(let j=0;j<4;j++)
 {
 	let m=j+1;
-	$(".rightvideosArea1").append('<div class="post wrap-vid" id="rightArea1iframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="images/Unity/'+m+'.jpg" /></div><div class="wrapper" style="margin-left:5px;"><h5 class="vid-name"><a href="#">Videos Name</a></h5><div class="info"><h6>By <a href="#">Kelvin</a></h6><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div></div>');
+	$(".rightvideosArea1").append('<div class="post wrap-vid" id="rightArea1iframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="images/Unity/'+m+'.jpg" /></div><div class="wrapper" style="margin-left:5px;"><h5 class="vid-name"><a href="#">Videos Name</a></h5><div class="info"><h6>By <a href="#">Unity</a></h6><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div></div>');
 	
 	$("#rightArea1iframe"+j).click(function(){
 		let p=j;
@@ -214,7 +214,7 @@ for(let j=0;j<4;j++)
 //..............右侧视频区域2
 for(let j=0;j<3;j++)
 {
-	$(".rightvideosArea2").append('<div class="wrap-vid" id="rightArea2iframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="images/Unity/1.jpg" /></div><h3 class="vid-name"><a href="#">Videos Name</a></h3><div class="info"><h5>By <a href="#">Kelvin</a></h5><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div>');
+	$(".rightvideosArea2").append('<div class="wrap-vid" id="rightArea2iframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="images/Unity/1.jpg" /></div><h3 class="vid-name"><a href="#">Videos Name</a></h3><div class="info"><h5>By <a href="#">Unity</a></h5><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div>');
 	$("#rightArea2iframe"+j).click(function(){
 		let p=j;
 		alert(p);
@@ -225,7 +225,7 @@ for(let j=0;j<3;j++)
 for(let j=0;j<3;j++)
 {
 	
-	$(".downvideosArea").append('<div class="col-md-4"><div class="wrap-vid" id="downAreaiframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="images/Unity/2.jpg" /></div><h3 class="vid-name"><a href="#">Videos Name</a></h3><div class="info"><h5>By <a href="#">Kelvin</a></h5><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div></div>');
+	$(".downvideosArea").append('<div class="col-md-4"><div class="wrap-vid" id="downAreaiframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="images/Unity/2.jpg" /></div><h3 class="vid-name"><a href="#">Videos Name</a></h3><div class="info"><h5>By <a href="#">Unity</a></h5><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div></div>');
 	$("#downAreaiframe"+j).click(function(){
 		let p=j;
 		alert(p);
