修改数据传输

--- a/Unity.html
+++ b/Unity.html
@@ -176,7 +176,7 @@
 								<div class="col-md-6">
 									<img src="images/Unity/6.jpg" />
 									<h3><a href="#">Marshall, Will, and Holly on a Routine Expedition</a></h3>
-									<span><i class="fa fa-heart"></i> 1,200 / <i class="fa fa-calendar"></i> 25/3/2015 / <i class="fa fa-comment-o"> / </i> 10 <i class="fa fa-eye"></i> 945</span>
+									<span><i class="fa fa-heart"></i> 1,200 / <i class="fa fa-calendar"></ig> 25/3/2015 / <i class="fa fa-comment-o"> / </i> 10 <i class="fa fa-eye"></i> 945</span>
 									<span class="rating">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
@@ -260,27 +260,34 @@
 					<div class="widget wid-new-post">
 						<div class="heading"><h4>虚以待位</h4></div>
 						<div class="content">
-							<h6>Lorem Ipsum is simply dummy</h6>
-							<img src="images/Unity/22.jpg" />
-							<ul class="list-inline">
-								<li><i class="fa fa-calendar"></i>25/3/2015</li> 
-								<li><i class="fa fa-comments"></i>1,200</li>
-							</ul>
-							<p>Title should not overflow the content area A few things to check for: Non-breaking text in the...</p>
-							<h6>Lorem Ipsum is simply dummy</h6>
+							<div>
+								<h6>Lorem Ipsum is simply dummy</h6>
+								<img src="images/Unity/22.jpg" />
+								<ul class="list-inline">
+									<li><i class="fa fa-calendar"></i>25/3/2015</li> 
+									<li><i class="fa fa-comments"></i>1,200</li>
+								</ul>
+								<p>Title should not overflow the content area A few things to check for: Non-breaking text in the...</p>
+							</div>
+							<div>
+								<h6>Lorem Ipsum is simply dummy</h6>
 							<img src="images/Unity/23.jpg" />
 							<ul class="list-inline">
 								<li><i class="fa fa-calendar"></i>25/3/2015</li> 
 								<li><i class="fa fa-comments"></i>1,200</li>
 							</ul>
 							<p>Title should not overflow the content area A few things to check for: Non-breaking text in the...</p>
-							<h6>Lorem Ipsum is simply dummy</h6>
+							</div>
+							
+							<div>
+								<h6>Lorem Ipsum is simply dummy</h6>
 							<img src="images/Unity/24.jpg" />
 							<ul class="list-inline">
 								<li><i class="fa fa-calendar"></i>25/3/2015</li> 
 								<li><i class="fa fa-comments"></i>1,200</li>
 							</ul>
 							<p>Title should not overflow the content area A few things to check for: Non-breaking text in the...</p>
+							</div>
 						</div>
 					</div>
 					<!---- Start Widget ---->
