--- a/single.html
+++ b/single.html
@@ -86,10 +86,11 @@
 						<span><i class="fa fa-calendar"></i>25/3/2015</span> 
 						<span><i class="fa fa-heart"></i>1,200</span>
 					</div>
-					<p style="margin-top: 20px" id="texintroduce">2020年1月30日  《异教徒》短片由Unity公司Demo团队倾力打造，在2019年的GDC上展示了前半部分，现在完整版正式推出，并带有中文配音。
+					<p style="margin-top: 20px;height:100px;" id="texintroduce">2020年1月30日  《异教徒》短片由Unity公司Demo团队倾力打造，在2019年的GDC上展示了前半部分，现在完整版正式推出，并带有中文配音。
 							Unity Demo Team团队的使命就是不断挑战和挖掘Unity的潜能。在完整版异教徒短片中，团队充分利用Unity高清晰渲染管线 (HDRP)、VFX Graph等功能，成功刻画出了逼真的数字人类。</p>
 					<h4>Heading</h4>
-					<p style="margin-top: 20px">Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec ac euismod turpis.</p>
+					<p style="margin-top: 20px;height:90px;">Aenean feugiat in ante et blandit. Vestibulum posuere molestie risus, ac interdum magna porta non. Pellentesque rutrum fringilla elementum. Curabitur tincidunt porta lorem vitae accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec ac euismod turpis.</p>
+					<h4>Tags</h4>
 					<div class="vid-tags">
 						<a href="#">Animal</a>
 						<a href="#">Aenean</a>
@@ -117,7 +118,7 @@
 
 				<!---- Start Widget ---->
 				<div class="widget wid-post">
-					<div class="heading"><h4>Category</h4></div>
+					<div class="heading"><h4>类别</h4></div>
 					<div class="content rightvideosArea1">
 					</div>
 				</div>
@@ -172,6 +173,7 @@
 	
 	<!-- JS -->
 	<script src="owl-carousel/owl.carousel.js"></script>
+	<script src="js/data/data.js"></script>
     <script>
 		layui.use('element', function(){
       var element = layui.element;
@@ -181,17 +183,19 @@
     $(document).ready(function() {
       
 //............头部视频连接
-var HeadvideoURL=['https://www.youtube.com/embed/eb9mCUpDyx8','https://www.youtube.com/embed/Lsj7ga90Z3E','https://www.youtube.com/embed/7bMOhNUA1bI?list=PLpPd_BKEUoYhN8CiOoNLTSVh-7U5yjg3n','https://www.youtube.com/embed/tnUPngBEnQ8','https://www.youtube.com/embed/V2NZb0WN7SY','https://www.youtube.com/embed/Ar9eIn4z6XE'];
-var HeadImageURL=['https://i.ytimg.com/vi/eb9mCUpDyx8/hqdefault.jpg?sqp=-oaymwEcCOADEI4CSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLD-50gmBpt0HJDlrcxTY_MJXFot4g','https://i.ytimg.com/vi/Lsj7ga90Z3E/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDAfa12FaP0ny54LOhDVc18zT2N4A','https://i.ytimg.com/vi/7bMOhNUA1bI/hqdefault.jpg?sqp=-oaymwEXCNACELwBSFryq4qpAwkIARUAAIhCGAE=&rs=AOn4CLC6q2O4jFpEUlbkBeY_2ggoHp7j6A','https://i.ytimg.com/vi/tnUPngBEnQ8/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLCdotEVQnoozKZyIPpoH82VY7qFQg','https://i.ytimg.com/vi/V2NZb0WN7SY/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLDW6IV0P8CVDxPZCatp-dL2JLQyLw','https://i.ytimg.com/vi/Ar9eIn4z6XE/hq720.jpg?sqp=-oaymwEcCOgCEMoBSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBtTZaG0HVGZO1mZvEM8LFa4XAyPQ'];
-var TextIntroduce=[]
-for(let j=0;j<HeadvideoURL.length;j++)
+
+function ChangeIframeVideo(url)
 {
-	$('#owl-demo').append('<div class="item" id="iframe'+j+'"iframeid="'+j+'" ><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Video'+j+'</p></div><img src="'+HeadImageURL[j]+'" /></div></div>');
+	$("#URLTO").attr("src",url);
+	$("#texintroduce").text("");
+	$("#TextIntroduceName").text("Unity");
+}
+
+for(let j=0;j<headVidoe.length;j++)
+{
+	$('#owl-demo').append('<div class="item" id="iframe'+j+'"iframeid="'+j+'" ><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>'+headVidoe[j].titlename+'</p></div><img src="'+headVidoe[j].HeadImageURL+'"  /></div></div>');
 	$("#iframe"+j).click(function(){
-		let p=j;
-		$("#URLTO").attr("src",HeadvideoURL[j]);
-		$("#texintroduce").text("");
-		$("#TextIntroduceName").text("Unity");
+		ChangeIframeVideo(headVidoe[j].HeadvideoURL);
 	})
 }
 
@@ -200,11 +204,11 @@ for(let j=0;j<HeadvideoURL.length;j++)
 for(let j=0;j<4;j++)
 {
 	let m=j+1;
-	$(".rightvideosArea1").append('<div class="post wrap-vid" id="rightArea1iframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="images/Unity/'+m+'.jpg" /></div><div class="wrapper" style="margin-left:5px;"><h5 class="vid-name"><a href="#">Videos Name</a></h5><div class="info"><h6>By <a href="#">Unity</a></h6><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div></div>');
+	$(".rightvideosArea1").append('<div class="post wrap-vid" id="rightArea1iframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="'+headVidoe[j].HeadImageURL+'" /></div><div class="wrapper" style="margin-left:5px;"><h5 class="vid-name"><a href="#">Videos Name</a></h5><div class="info"><h6>By <a href="#">Unity</a></h6><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div></div>');
 	
 	$("#rightArea1iframe"+j+" .zoom-caption").click(function(){
-		let p=j;
-		alert(p);
+		// let p=j;
+		ChangeIframeVideo(headVidoe[j].HeadvideoURL);
 	});
 	
 
@@ -214,10 +218,9 @@ for(let j=0;j<4;j++)
 //..............右侧视频区域2
 for(let j=0;j<3;j++)
 {
-	$(".rightvideosArea2").append('<div class="wrap-vid" id="rightArea2iframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="images/Unity/1.jpg" /></div><h3 class="vid-name"><a href="#">Videos Name</a></h3><div class="info"><h5>By <a href="#">Unity</a></h5><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div>');
+	$(".rightvideosArea2").append('<div class="wrap-vid" id="rightArea2iframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="'+headVidoe[j].HeadImageURL+'" /></div><h3 class="vid-name"><a href="#">Videos Name</a></h3><div class="info"><h5>By <a href="#">Unity</a></h5><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div>');
 	$("#rightArea2iframe"+j+" .zoom-caption").click(function(){
-		let p=j;
-		alert(p);
+		ChangeIframeVideo(headVidoe[j].HeadvideoURL);
 	});
 }
 //
@@ -225,10 +228,9 @@ for(let j=0;j<3;j++)
 for(let j=0;j<3;j++)
 {
 	
-	$(".downvideosArea").append('<div class="col-md-4"><div class="wrap-vid" id="downAreaiframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="images/Unity/2.jpg" /></div><h3 class="vid-name"><a href="#">Videos Name</a></h3><div class="info"><h5>By <a href="#">Unity</a></h5><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div></div>');
+	$(".downvideosArea").append('<div class="col-md-4"><div class="wrap-vid" id="downAreaiframe'+j+'"><div class="zoom-container"><div class="zoom-caption"><span>Youtube</span><a ><i class="fa fa-play-circle-o fa-5x" style="color: #fff"></i></a><p>Videos Name</p></div><img src="'+headVidoe[j].HeadImageURL+'" /></div><h3 class="vid-name"><a href="#">Videos Name</a></h3><div class="info"><h5>By <a href="#">Unity</a></h5><span><i class="fa fa-calendar"></i>25/3/2015</span><span><i class="fa fa-heart"></i>1,200</span></div></div></div>');
 	$("#downAreaiframe"+j+" .zoom-caption").click(function(){
-		let p=j;
-		alert(p);
+		ChangeIframeVideo(headVidoe[j].HeadvideoURL);
 	});
 
 
