--- a/Unity.html
+++ b/Unity.html
@@ -176,7 +176,7 @@
 								<div class="col-md-6">
 									<img src="images/Unity/6.jpg" />
 									<h3><a href="#">Marshall, Will, and Holly on a Routine Expedition</a></h3>
-									<span><i class="fa fa-heart"></i> 1,200 / <i class="fa fa-calendar"></ig> 25/3/2015 / <i class="fa fa-comment-o"> / </i> 10 <i class="fa fa-eye"></i> 945</span>
+									<span><i class="fa fa-heart"></i> 1,200 / <i class="fa fa-calendar"></i> 25/3/2015 / <i class="fa fa-comment-o"> / </i> 10 <i class="fa fa-eye"></i> 945</span>
 									<span class="rating">
 										<i class="fa fa-star"></i>
 										<i class="fa fa-star"></i>
