修改项目创建方式

--- a/Unity.html
+++ b/Unity.html
@@ -392,7 +392,7 @@
 			</div>
 		</div>
 		<div class="copy-right">
-			<p>1327235001@qq.com<a target="_blank" href="#">Yan设计</a></p>
+			<p>1327235001@qq.com<a target="_blank" href="#">YanMaster设计</a></p>
 		</div>
 	</footer>
 	<!-- Footer -->
