--- a/UnityclassWork.html
+++ b/UnityclassWork.html
@@ -105,7 +105,7 @@
 		</div>
 		<!-- Container -->
 		
-		<p class="copy">Copyright &copy; 2014.Company name All rights reserved.<a target="_blank" href="http://h2design.taobao.com/">氢设计</a></p>
+		<p class="copy">1327235001@qq.com<a target="_blank" href="">YanMaster设计</a></p>
 	</div>	
 </div>	
 <!-- End BG -->
@@ -114,6 +114,7 @@
 
 
 </body>
+<script src="js/build/build.js"></script>
 <script>
     //注意：导航 依赖 element 模块，否则无法进行功能性操作
     layui.use('element', function(){
@@ -121,8 +122,10 @@
       
       //…
     });
-    $(".projects ul").prepend(
-      '<li><div class="project"><div class="project-bg"><a target="_blank"  class="plus">Unity</a><a target="_blank" href="Unity/stud1/index.html" ><img src="images/UnityPro/stud1.png" alt="" /></a></div></div>'
-    )
+    // $(".projects ul").prepend(
+    //   '<li><div class="project"><div class="project-bg"><a target="_blank"  class="plus">Unity</a><a target="_blank" href="Unity/stud1/index.html" ><img src="images/UnityPro/stud1.png" alt="" /></a></div></div>'
+    // )
+	addProject('stud1','UnityPro');
+	
     </script>
 </html>
