新unity项目提交

--- a/UnityclassWork.html
+++ b/UnityclassWork.html
@@ -85,7 +85,9 @@
 					<h2>Class Work project</h2>
 					<div class="projects">
 						<ul>
-						
+						<li>
+							
+						</li>
 						</ul>
 					</div>
 				</div>
@@ -125,7 +127,7 @@
     // $(".projects ul").prepend(
     //   '<li><div class="project"><div class="project-bg"><a target="_blank"  class="plus">Unity</a><a target="_blank" href="Unity/stud1/index.html" ><img src="images/UnityPro/stud1.png" alt="" /></a></div></div>'
     // )
-	addProject('stud1','UnityPro');
-	
+	addProject('stud1','stud1');
+	addProject('stud2','stud2');
     </script>
 </html>
