--- a/index.html
+++ b/index.html
@@ -90,10 +90,12 @@
 			
 				<!-- Portfolio -->
 				<div id="portfolio">
-					<h2>my project</h2>
+					<h2>我的项目</h2>
 					<div class="projects">
 						<ul>
-						  
+						  <li>
+
+						  </li>
 						</ul>
 					</div>
 				</div>
@@ -139,13 +141,11 @@
 <script>
     //注意：导航 依赖 element 模块，否则无法进行功能性操作
     layui.use('element', function(){
-      var element = layui.element;
+      var element = layui.element;x
       
       //…
     });
-
-   
-   addProject('stud1','UnityPro');
-
+   addProject('stud1','stud1');
+   addProject('stud2','stud2');
     </script>
 </html>
